# mycroft

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CONTRIBUTING.md  DEVELOPERS.md  MycroftConfig.cmake  README.md
cmake/: FindCapstone.cmake  FindSQLite3.cmake  packaging.cmake
cmake/utils/: testing.cmake
core/: CMakeLists.txt  config.h.in  main.c
core/src/: config.h
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  doxygen.in
doc/install/: archlinux.md  fedora.md  gentoo.md  install_template.md
gui/qt/: CMakeLists.txt  main.cpp  maineditor.h  mainwindow.cpp  mainwindow.h  templateeditor.cpp  templateeditor.h
include/mycroft/: context.h  error.h  file.h  hook.h  mdb.h  membuf.h  mycroft.h  plugin.h  project.h  script.h  template.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  config.h.in  context.c  context.h  contextmngr.c  contextmngr.h  core.c  core.h  database.h  error.h  file.c  membuf.c  plugin.c  plugin.h  project.c  project.h
lib/core/binds/: context.c  context.h  core.c  file.c  file.h
lib/core/template/: template.c
lib/mycroft_core/: CMakeLists.txt  context.c  file.c  file.h  hook.c  hook.h  interpreter.c  interpreter.h  membuf.c  mycroft.c  mycroft.h  plugin.c  plugin.h  project.c  project.h  script.c  script.h
lib/mycroft_core/binds/: context.c  core.c  core.h  file.c  file.h  project.c  project.h
lib/mycroft_core/binds/template/: typesystem.c  typesystem.h
lib/mycroft_core/template/: template.c  template_parser.c  template_parser.h  type.h  typedef.c  typedef.h  typesystem.c  typesystem.h
lib/mycroft_core/template/types/: byte.c  char.c
lib/mycroft_core/typesystem/: typedef.c  typedef.h  types.h  typesystem.c  typesystem.h
lib/mycroft_core/typesystem/types/: byte.c  byte.h  char.c  char.h
res/: CMakeLists.txt  config.py
res/packaging/: CMakeLists.txt  PKGBUILD.cmake
res/plugins/: __init__.py
res/scripts/: __init__.py  importtest.py  init.py  testing.py
res/types/: int32.py  uint32_t.py
src/: CMakeLists.txt  config.h  main.c
src/client/: CMakeLists.txt
src/client/cli/: CMakeLists.txt  config.h.in  main.c
src/client/qt/: CMakeLists.txt  config.h.in  hexeditor.cpp  hexeditor.h  main.cpp  maineditor.cpp  maineditor.h  mainhexeditor.cpp  mainhexeditor.h  mainhexeditor.ui  mainwindow.cpp  mainwindow.h  mycroft.cpp  mycroft.h  mycroft.pro  mycroft.ui  projectview.cpp  projectview.h  resources.qrc  templateeditor.cpp  templateeditor.h  templatemodel.cpp  templatemodel.h  templatenode.cpp  templatenode.h
src/core/: CMakeLists.txt  cfg.c  cfg.h  config.c  config.h  config.h.in  config_parse.c  config_parse.h  core.c  core.h  database.c  database.h  file.c  file.h  hook.c  hook.h  main.c  membuf.c  membuf.h  plugin.c  plugin.h  template.c  template.h  template_parse.c  template_parse.h  template_parser.c  template_parser.h
src/core/binds/: binds_file.c  binds_file.h  core.c  core.h  file.c
src/gui/: CMakeLists.txt
src/gui/qt/: CMakeLists.txt  disasmeditor.h  disassembly.h  maineditor.cpp  mainwindow.cpp  templatemodel.cpp  templatemodel.h  templatenode.cpp
src/tools/: CMakeLists.txt
src/tools/pytestbench/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test.cpp
tests/core/context/: context.cpp  main.cpp
tests/core/file/: CMakeLists.txt  config.h.in  file.cpp  main.cpp
tests/core/file/largefile/: CMakeLists.txt  largefile.cpp  largefile.py  main.cpp
tests/core/file/res/: testfile1
tests/core/plugin/: CMakeLists.txt  tests.cpp
tests/core/project/: main.cpp  project.cpp
tests/core/project/res/: testfile2  testfile3
tests/core/test_context/: CMakeLists.txt  context.cpp
tests/core/test_core/: CMakeLists.txt  core.cpp  main.cpp
tests/core/test_database/: CMakeLists.txt  database.cpp  main.cpp
tests/core/test_database/res/: main.c
tests/core/test_file/: CMakeLists.txt  config.h  config.h.in  file.cpp  main.cpp
tests/core/test_plugin/: CMakeLists.txt  tests.cpp
tests/core/test_project/: CMakeLists.txt  project.cpp
tests/core/test_project/res/: testbin2  testfile1  testfile4
tests/core/test_template/: CMakeLists.txt  template_basicentry.cpp  template_somestructs.cpp
tests/core/test_template/res/: basicentry.mtf  comment.mtf  noentry.mtf
tests/template/: CMakeLists.txt
tests/template/template/: main.cpp  template_basicentry.cpp  template_somestructs.cpp
tests/template/template/res/: somestructs.mtf
tests/template/typesystem/: CMakeLists.txt  typesystem.py  typesystem_created.cpp
