install(DIRECTORY ${MYCROFT_LOCAL_PLUGIN_PATH} DESTINATION ${MYCROFT_DATA_PATH})
install(DIRECTORY ${MYCROFT_LOCAL_SCRIPT_PATH} DESTINATION ${MYCROFT_DATA_PATH})
install(DIRECTORY ${MYCROFT_LOCAL_TYPES_PATH}  DESTINATION ${MYCROFT_DATA_PATH})
install(FILES "config.py" DESTINATION ${MYCROFT_DATA_PATH} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

add_subdirectory(packaging)
